# ScratchQL

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  client  db  server
.dev/: scopes.txt
.dev/githooks/: commit-msg  post-commit  post-fetch  post-merge  pre-commit  pre-push
db/Example/Table1/: Table1.tsv  line.index  meta.tsv
setup/: build  git-config  git-hooks  setup
src/: config.h  main.cpp  main.h  scratchql
src/Controller/: Controller.cpp  Controller.h
src/Controller/Interpreter/: Interpreter.cpp  Interpreter.h
src/Controller/Server/: Server.cpp  Server.h
src/Controller/Server/Connection_Handler/: Connection_Handler.cpp  Connection_Handler.h
src/DBMS/: DBMS.cpp  DBMS.h
src/DBMS/Cell/: Cell.cpp  Cell.h
src/DBMS/FileHandler/: FileHandler.cpp  FileHandler.h
src/DBMS/Table/: Table.cpp  Table.h
src/DBMS/Table/Index/: Index.cpp  Index.h
src/DBMS/Table/Index/Indices/: BTree.h  Container.h  HMap.h  TTree.h  indices.h  interface.h
src/DBMS/Table/Meta/: Meta.cpp  Meta.h
src/Language/Parser/: Parser.cpp  Parser.h
src/Language/Parser/ParseTree/: ParseTree.cpp  ParseTree.h
src/Language/Query/: Query.cpp  Query.h
src/Logger/: Logger.cpp  Logger.h
src/Model/: FileHandler.cpp  FileHandler.h
src/Model/Cell/: Cell.cpp  Cell.h
src/Model/Database/: Database.cpp  Database.h
src/Model/FileHandler/: FileHandler.cpp  FileHandler.h
src/Model/SQL/: SQL.h
src/Model/SQL/Query/: Query.cpp  Query.h
src/Model/Table/: Table.cpp  Table.h
src/Parser/: Parser.cpp  Parser.h
src/SQL/: SQL.cpp  SQL.h
src/SQL/Query/: Query.h
src/Server/: Server.cpp  Server.h  ServerDBMS-bak.capnp  ServerDBMS.capnp  gen_proto  regen_proto
src/Server/Wrapper/: Wrapper.cpp  Wrapper.h
src/Time/: Time.h
src/Util/: Helper.h  Tokens.cpp  Tokens.h  filesystem.h  legacy.h
src/View/Client/: Client.cpp  Client.h
test/: empty_test.cpp  main.cpp  main.h  test.sh
test/DBMS/: DBMS.cpp
test/DBMS/Cell/: Cell.cpp
test/DBMS/FileHandler/: FileHandler.cpp
test/DBMS/Table/: Table.cpp
test/DBMS/Table/Index/: Index.cpp
test/Language/Parser/: Parser.cpp
test/Language/Query/: Query.cpp
test/Model/: FileHandler.cpp
test/Model/Database/: Database.cpp
test/Model/FileHandler/: FileHandler.cpp
test/Model/Table/: Table.cpp
test/Server/: Server.cpp
test/Server/Wrapper/: Wrapper.cpp
test/Time/: Time.cpp
